# py123d

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yaml  pytest.yaml
docs/: README.md  conf.py  contributing.md  index.rst  installation.md
docs/api/datatypes/detections/: 01_box_detections.rst  02_traffic_lights.rst
docs/api/datatypes/map_objects/: 00_base_map_objects.rst  01_lane.rst  02_lane_group.rst  03_intersection.rst  04_crosswalk.rst  05_carpark.rst  06_walkway.rst  07_generic_drivable.rst  08_stop_zone.rst  09_road_edge.rst  10_road_line.rst  index.rst
docs/api/datatypes/metadata/: 01_log_metadata.rst  02_map_metadata.rst  03_scene_metadata.rst  index.rst
docs/api/datatypes/sensors/: 01_camera.rst  02_pinhole_camera.rst  03_fisheye_mei_camera.rst  04_ftheta_camera.rst  05_lidar.rst  index.rst
docs/api/datatypes/time/: index.rst
docs/api/datatypes/vehicle_state/: 01_ego_state.rst  02_dynamic_state.rst  03_ego_metadata.rst  index.rst
docs/api/geometry/: index.rst
docs/api/geometry/01_primitives/: 04_se.rst  06_polylines.rst  08_occupancy_map.rst  index.rst
docs/api/geometry/03_utils/: 01_rotation_utils.rst  02_bounding_box_utils.rst  03_polyline_utils.rst  index.rst
docs/api/map/: index.rst
docs/datasets/: av2.rst  carla.rst  index.rst  kitti-360.rst  ncore.rst  nuplan.rst  nuscenes.rst  pandaset.rst  physical-ai-av.rst  wod_motion.rst  wod_perception.rst
docs/notes/: conventions.rst
src/py123d/api/: __init__.py
src/py123d/api/map/: __init__.py  base_map_writer.py  map_api.py
src/py123d/api/scene/: base_log_writer.py  scene_api.py  scene_builder.py  scene_filter.py  scene_metadata.py
src/py123d/api/utils/: arrow_helper.py  arrow_metadata_utils.py
src/py123d/common/execution/: __init__.py  process_pool_executor.py  ray_executor.py
src/py123d/common/utils/: enums.py  mixin.py  uuid_utils.py
src/py123d/datatypes/: __init__.py
src/py123d/datatypes/custom/: __init__.py  custom_modality.py
src/py123d/datatypes/detections/: __init__.py  box_detection_label.py  box_detections.py  box_detections_metadata.py  traffic_light_detections.py
src/py123d/datatypes/map_objects/: __init__.py  map_layer_types.py  map_objects.py  utils.py
src/py123d/datatypes/metadata/: __init__.py  base_metadata.py  log_metadata.py  map_metadata.py  scene_metadata.py
src/py123d/datatypes/modalities/: __init__.py  base_modality.py
src/py123d/datatypes/sensors/: __init__.py  base_camera.py  fisheye_mei_camera.py  ftheta_camera.py  lidar.py  pinhole_camera.py
src/py123d/datatypes/time/: __init__.py  timestamp.py
src/py123d/datatypes/vehicle_state/: __init__.py  dynamic_state.py  ego_state.py  ego_state_metadata.py
src/py123d/geometry/: __init__.py  bounding_box.py  point.py  polyline.py  pose.py  rotation.py  vector.py
src/py123d/geometry/transform/: __init__.py
src/py123d/geometry/utils/: kinematics.py  kinematics_se3.py  polyline_utils.py  rotation_utils.py  units.py
src/py123d/parser/: base_dataset_parser.py  registry.py
src/py123d/parser/av2/: av2_map_parser.py  av2_sensor_io.py  av2_sensor_parser.py
src/py123d/parser/kitti360/: kitti360_map_parser.py  kitti360_parser.py  kitti360_sensor_io.py
src/py123d/parser/ncore/: download.py  ncore_parser.py  ncore_sensor_io.py
src/py123d/parser/nuplan/: nuplan_map_parser.py  nuplan_parser.py  nuplan_sensor_io.py
src/py123d/parser/nuscenes/: nuscenes_map_parser.py  nuscenes_parser.py  nuscenes_sensor_io.py
src/py123d/parser/opendrive/: opendrive_map_parser.py  opendrive_parser.py
src/py123d/parser/pandaset/: pandaset_parser.py  pandaset_sensor_io.py
src/py123d/parser/physical_ai_av/: physical_ai_av_parser.py  physical_ai_av_sensor_io.py
src/py123d/parser/wod/: motion_download.py  wod_download.py  wod_map_parser.py  wod_motion_parser.py  wod_perception_parser.py  wod_perception_sensor_io.py
src/py123d/script/: run_conversion.py  run_viser.py
src/py123d/script/builders/: bokeh_config_builder.py  (+3 more)
tests/docs/: test_docs_build.py
tests/unit/geometry/: test_bounding_box.py  test_geometry_index.py  test_point.py  test_polyline.py  test_polyline_se3.py  test_pose.py  test_rotation.py  test_rotation_interpolation.py  test_vector.py
tests/unit/parser/: test_registry.py
tutorials/: 01_scene_tutorial.ipynb  02_map_tutorial.ipynb  03_visualizations_tutorial.ipynb  04_geometry_tutorial.ipynb  05_scene_filter_tutorial.ipynb
(+204 files in other folders)
